New design is configured

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,11 @@
   <link rel="stylesheet" href="{{ "/css/header.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/default.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/footer.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script type="text/javascript" src="{{ "/js/script.js" | prepend: site.baseurl }}"></script>
 </head>
