--- a/_layouts/posts_layout.html
+++ b/_layouts/posts_layout.html
@@ -12,7 +12,7 @@
           {{ content }}
       </div>
       <div class="right-block">
-          <h3 style="margin-left:20px;">Posts related to :<font color="blue"> {{ page.categories }}</font></h3> 
+          <h3 style="margin-left:20px;">Posts related to :<font color="blue"> blog </font></h3>
           {% for post in site.categories.blog %}
               <a href="{{ post.url | prepend: site.baseurl }}"><div class="related-posts">{{ post.title }} ... </div></a>
           {% endfor %}
