--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
-<footer class="site-footer">
-
+<div class="site-footer">
+    <div class="post-categories">
+        <label > Tags </label>
+         {% for tag in site.tags %}
+            <div class="tag"> {{ tag[0] }} </div>
+         {% endfor %}
+    </div>
   <div class="wrapper">
-      <div class="footer-col">
-          {{ site.title }}
-      </div>
-      <div class="footer-col">
-        <p>{{ site.description }}</p>
+      <div >
+        <label>{{ site.description }}</label>
       </div>
   </div>
-
-</footer>
+</div>
