Facebook and Twitter Link is rearrabged

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,15 +6,14 @@
          {% endfor %}
     </div>
   <div class="wrapper">
-      <div>
-          <a class="" href="http://twitter.com/{{site.twitter_username}}">
-              <span class="site-footer-twitter-icons-title">Twitter</span>
+      <div class="footer-col-1">Connect:
+          <a class="site-footer-twitter-icons-title" href="http://twitter.com/{{site.twitter_username}}">
+              Twitter
+          </a>|
+          <a class="site-footer-facebook-icons-title" href="http://facebook.com/{{site.facebook_username}}">
+              Facebook
           </a>
-          <a class="" href="http://facebook.com/{{site.facebook_username}}">
-              <span class="site-footer-facebook-icons-title">Facebook</span>
-          </a>
-        <div>{{ site.description }}</div>
-
       </div>
+
   </div>
 </div>
