Comment section is primarily served

--- a/_layouts/posts_layout.html
+++ b/_layouts/posts_layout.html
@@ -11,6 +11,7 @@
       <div class="left-block">
           {{ content }}
           <!-- {{ page.tags | array_to_sentence_string }} -->
+          {% include comments.html %}
       </div>
       <div class="right-block">
           <h3 style="margin-left:20px;">Posts related to :<font color="blue">{{ page.categories | array_to_sentence_string }}</font></h3>
