comment can be captured now

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 <div class="comments">
     <h2>Comments</h2>
 
-    <!-- {% capture commentid %}comments{{ page.id | replace: '/','-'}}{% endcapture %} -->
+    {% capture commentid %}comments{{ page.id | replace: '/','-'}}{% endcapture %}
 
     <div class="comment">
     {% for comment in site.data.comments %}
@@ -9,7 +9,6 @@
             <div class="comment-contents">{{ comment.contents | markdownify }}</div>
             <div class="comment-date">{{ comment.date | date: '%a %d %B %Y, %H:%M' }}</div>
 
-            <!-- <li> {{ comment.author }} </li> -->
     {% endfor %}
     </div>
     <p>Add a comment! <a href="https://github.com/prasunpk/prasunpk.github.io/issues/new">Raise an issue</a> and I'll make it a comment!</p>
