--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,12 @@
         {{ content }}
       </div>
       <div class="other-content">
-           {% for tag in site.tags %}
+           <!-- {% for tag in site.tags %}
               <div class="tag"> {{ tag[0] }} </div>
+           {% endfor %} -->
+           <div class="heading">Categories</div>
+           {% for category in site.categories %}
+              <div class="category"> {{ category[0] }} </div>
            {% endfor %}
       </div>
     </div>
