--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,11 @@
 <div class="site-footer">
   <div class="wrapper">
-      <div class="footer-col-1">Connect:
+      <div class="footer-layer-1">
+          {% for tag in site.tags %}
+              <div class="tag"> {{ tag[0] }} </div>
+          {% endfor %}
+      </div>
+      <div class="footer-layer-2">Connect:
           <a class="site-footer-twitter-icons-title" href="http://twitter.com/{{site.twitter_username}}">
               Twitter
           </a>|
