--- a/css/postsLayout.css
+++ b/css/postsLayout.css
@@ -10,9 +10,8 @@
     float: left;
 }
 .related-posts{
-    font-size: 18px;
-    margin-left: 20px;
-    padding: 5px;
+    font-size: 16px;
+    margin-top: 5px;
 }
 
 a{
