--- a/css/default.css
+++ b/css/default.css
@@ -13,7 +13,7 @@
 .page-content .other-content{
     width: 350px;
     float: left;
-    padding: 10px;
+    padding: 10px 10px 20px 10px;
 }
 
 .category{
