--- a/_layouts/posts_layout.html
+++ b/_layouts/posts_layout.html
@@ -9,8 +9,15 @@
 
     <div class="page-content">
       <div class="left-block">
-          {{ content }}
-          {% include comments.html %}
+              <div class="title-heading">
+                  {{ page.title }}
+              </div>
+              <div class="actual-content">
+                  {{ content }}
+              </div>
+              <div class="page-comment">
+                {% include comments.html %}
+            </div>
       </div>
       <div class="other-content">
           <div class="heading">Categories</div>
