--- a/css/postsLayout.css
+++ b/css/postsLayout.css
@@ -1,12 +1,11 @@
 .page-content .left-block{
-    width: 63%;
+    width: 75%;
     float: left;
-    border-right: 1px solid grey;
     padding: 10px;
 }
 
-.page-content .right-block{
-    width: 29%;
+.page-content .other-content{
+    width: 20%;
     float: left;
 }
 .related-posts{
@@ -23,4 +22,18 @@ a:hover{
     text-decoration: underline;
     transition: color 0.5s ease-in;
     color: blue;
+}
+
+.title-heading{
+    font-size: 30px;
+    border-bottom: 2px solid lightgrey;
+    padding: 5px 5px 2px 0px;
+}
+
+.actual-content{
+    padding: 5px 5px 10px 5px;
+}
+
+.page-comment{
+    padding: 5px 5px 10px 5px;
 }
