New layout is invoked

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="main-content">
-        {{ content }}
-      </div>
-      <div class="other-content">
-           <div class="heading">Categories</div>
-           {% for category in site.categories %}
-              <div class="category"> {{ category[0] }} </div>
-           {% endfor %}
-      </div>
-    </div>
-    {% include footer.html %}
-
-  </body>
-
-</html>
+{% include default.html %}
