Profile pic is included

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -17,25 +17,12 @@
 <link rel="stylesheet" type="text/css" href="/assets/resources/syntax/syntax.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/font-awesome/css/font-awesome.min.css">
-<link rel="icon" href="https://raw.githubusercontent.com/talk2ankan/uno-dbyll/gh-pages/uno-dbyll.png">
+<!-- <link rel="icon" href="https://raw.githubusercontent.com/talk2ankan/uno-dbyll/gh-pages/uno-dbyll.png"> -->
 
 <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/resources/bootstrap/js/bootstrap.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
-if(window.location.href=="http://blog.ankanbiswas.in/uno-dbyll/")
-{
-$("#sidebar").css({width:'100%'});
-$("#btnblog").click(function(){
-$("#sidebar").animate({width:'33.3333%'},'slow');
-});
-}
-});
-
-</script>
 	</head>
 <body>
 
@@ -109,7 +96,7 @@ $("#sidebar").animate({width:'33.3333%'},'slow');
 <footer class="navbar navbar-default">
     <div class="container">
       <p class="navbar-text pull-left">Some rights reserved &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. </br>
-      Created using <a class="navbar-button" href="https://github.com/twbs/bootstrap">Bootstrap3</a> and <a class="navbar-button" href="https://github.com/jekyll/jekyll">Jekyll</a>. Theme : <a class="navbar-button" href="https://github.com/talk2ankan/uno-dbyll">uno-dbyll</a> by talk2ankan.
+      Created using <a class="navbar-button" href="https://github.com/jekyll/jekyll">Jekyll</a> and Bootstrap.<br/> Theme : uno-dbyll.
  </p>
  </div>
   </footer>
