unnecessary files are removed

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -17,7 +17,6 @@
 <link rel="stylesheet" type="text/css" href="/assets/resources/syntax/syntax.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/font-awesome/css/font-awesome.min.css">
-<!-- <link rel="icon" href="https://raw.githubusercontent.com/talk2ankan/uno-dbyll/gh-pages/uno-dbyll.png"> -->
 
 <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 
@@ -55,7 +54,7 @@
 
 
       <a class="navbar-brand" href="{{ site.BASE_PATH }}">
-        <img src="{{site.author.uno-dbyll}}" class="img-circle" style="height:35px;width:35px"/>
+        <img src="{{site.author.avatar}}" class="img-circle" style="height:35px;width:35px"/>
         {{ site.title }}
       </a>
     </div>
