ICON is added for the page

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -3,7 +3,6 @@
 	<head>
 
 		<title>{{ page.title }}</title>
-
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
@@ -14,6 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/ico/favicon.ico?">
 <link rel="stylesheet" type="text/css" href="/assets/resources/syntax/syntax.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/resources/font-awesome/css/font-awesome.min.css">
