--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=sans-serif:500&subset=latin,latin-ext);
 
 body{
   overflow-X:hidden;
@@ -11,7 +11,7 @@ body{
     z-index: 4;
 }
 
-h1,h2,h3,h4,h5,h6 { font-family: 'Ubuntu', sans-serif; }
+h1,h2,h3,h4,h5,h6 { font-family: 'sans-serif', sans-serif; }
 
 .navbar-brand{
 
@@ -36,7 +36,7 @@ font-family: 'Raleway', sans-serif;
 	color: #e74c3c;
 	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 	padding: 0 5% 0;
-	font-family: ubuntu;
+	font-family: sans-serif;
 }
 
 
@@ -69,14 +69,15 @@ article {
 .post-date {
 	text-transform: uppercase;
 	font-size: 14px;
-	letter-spacing: 3px;
+	font-family: sans-serif;
+	letter-spacing: 1px;
 }
 
 
 
 footer {
   padding-top: 15px;
-  font-family: 'Ubuntu';
+  font-family: 'sans-serif';
 }
 
 #sidebar {
